--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@
                 <p class="section-name" style="margin-bottom: 3pt; ">News</p>
                 <div class="exp-list">
                     <ul>
+                        <li>&#x2022;&nbsp (05/2025) Join Adobe Research for summer internship. Welcome to connect at Bay
+                            Area.</a></li>
                         <li>&#x2022;&nbsp (04/2024) We have created an <a
                                 href="https://github.com/cwchenwang/awesome-4d-generation">awesome list of papers on 4D
                                 generation.</a></li>
@@ -122,7 +124,9 @@
                             Feng,
                             Jiatao Gu, Lingjie Liu</p>
                         <p>CVPR, 2025</p>
-                        <p>Coming Soon</p>
+                        <p><a href="https://czzzzh.github.io/Vid2Sim/Vid2Sim.pdf">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://czzzzh.github.io/Vid2Sim/index.html">Project Page</a>&nbsp;|&nbsp;<a
+                                href="=https://github.com/CzzzzH/Vid2Sim">Code</a></p>
                     </div>
                 </div>
                 <div class="row justify-content-center pub-item">
@@ -145,7 +149,7 @@
                 </div>
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 ''">
-                        <img src="data/paper_thumbnail/zero12g.png" alt="boot" class="img-fluid mx-auto rounded"
+                        <img src="data/paper_thumbnail/zero12g.png" alt="zero12g" class="img-fluid mx-auto rounded"
                             style="width: 80%; height: 130px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info-v1">
@@ -306,10 +310,11 @@
                 <p class="section-name">Services</p>
                 <div class="exp-list">
                     <ul>
-                        <li>Conference Reviewer: CVPR, ICCV, ECCV, ICLR, NeurIPS, SIGGRAPH Asia, AAAI, ACMMM, 3DV, WACV,
+                        <li>Conference Reviewer: CVPR, ICCV, ECCV, ICML, ICLR, NeurIPS, SIGGRAPH Asia, AAAI, ACMMM, 3DV,
+                            WACV,
                             PG
                         </li>
-                        <li>Journal Reviewer: PAMI, TVCG, TIP
+                        <li>Journal Reviewer: PAMI, ToG, TVCG, TIP, CVMJ
                         </li>
                     </ul>
                 </div>
