--- a/index.html
+++ b/index.html
@@ -112,6 +112,21 @@
                 <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="row justify-content-center pub-item">
+                    <div class="col-md-4 ''">
+                        <img src="data/paper_thumbnail/physctrl.png" alt="boot" class="img-fluid mx-auto rounded"
+                            style="width: 80%; height: 130px; display: block;">
+                    </div>
+                    <div class="col-md-8 paper-info-v1">
+                        <!-- Paper Title -->
+                        PhysCtrl: Generative Physics for Controllable and Physics-Grounded Video Generation
+                        <p class="text-muted"><u>Chen Wang*</u>, Chuhao Chen*, Yiming Huang, Zhiyang Dou, Yuan Liu, Jiatao Gu, Lingjie Liu</p>
+                        <p>Arxiv, 2025</p>
+                        <p><a
+                                href="https://cwchenwang.github.io/physctrl/pdfs/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://cwchenwang.github.io/physctrl">Project Page</a>
+                    </div>
+                </div>
+                <div class="row justify-content-center pub-item">
                     <div class="col-md-4">
                         <img src="data/paper_thumbnail/vid2sim.JPG" alt="boot" class="img-fluid mx-auto rounded"
                             style="width: 80%; height: 110px; display: block;">
@@ -126,7 +141,7 @@
                         <p>CVPR, 2025</p>
                         <p><a href="https://czzzzh.github.io/Vid2Sim/Vid2Sim.pdf">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://czzzzh.github.io/Vid2Sim/index.html">Project Page</a>&nbsp;|&nbsp;<a
-                                href="=https://github.com/CzzzzH/Vid2Sim">Code</a></p>
+                                href="https://github.com/CzzzzH/Vid2Sim">Code</a></p>
                     </div>
                 </div>
                 <div class="row justify-content-center pub-item">
@@ -146,22 +161,7 @@
                                 href="https://michaelszj.github.io/protracker/">Project Page</a>&nbsp;|&nbsp;<a
                                 href="https://github.com/Michaelszj/pro-tracker">Code</a></p>
                     </div>
-                </div>
-                <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
-                        <img src="data/paper_thumbnail/zero12g.png" alt="zero12g" class="img-fluid mx-auto rounded"
-                            style="width: 80%; height: 130px; display: block;">
-                    </div>
-                    <div class="col-md-8 paper-info-v1">
-                        <!-- Paper Title -->
-                        Zero-1-to-G: Taming Pretrained 2D Diffusion Model for Direct 3D Generation
-                        <p class="text-muted">Xuyi Meng*, <u>Chen Wang*</u>, Jiahui Lei, Kostas Daniilidis, Jiatao Gu,
-                            Lingjie Liu</p>
-                        <p>Arxiv, 2025</p>
-                        <p><a href="https://arxiv.org/pdf/2501.05427">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://mengxuyigit.github.io/projects/zero-1-to-G/">Project Page</a></p>
-                    </div>
-                </div>
+                </div> 
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4"><model-viewer tone-mapping="neutral"
                             src="data/paper_thumbnail/animal_character.glb" style="width: 100%;"
