--- a/index.html
+++ b/index.html
@@ -128,6 +128,21 @@
                 </div>
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4">
+                        <video width="80%" height="auto" autoplay loop muted controls class="mx-auto d-block">
+                            <source src="data/paper_thumbnail/dimo.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                    <div class="col-md-8 paper-info-v1">
+                        <!-- Paper Title -->
+                        DIMO: Diverse 3D Motion Generation for Arbitrary Objects
+                        <p class="text-muted">Linzhan Mou, Jiahui Lei, <u>Chen Wang</u>, Lingjie Liu, Kostas Daniilidis</p>
+                        <p>ICCV, 2025 <span style="color: red;">(Highlight)</span></p>
+                        <p><a href="https://drive.google.com/file/d/1OLg6frLoSHVi1b9vrG6azwlVSc3UngYE/view">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://github.com/Friedrich-M/DIMO">Code</a></p>
+                    </div>
+                </div>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-4">
                         <img src="data/paper_thumbnail/vid2sim.JPG" alt="boot" class="img-fluid mx-auto rounded"
                             style="width: 80%; height: 110px; display: block;">
                     </div>
@@ -188,7 +203,7 @@
                         Data-free Distillation of Denoising Diffusion Models with Bootstrapping
                         <p class="text-muted">Jiatao Gu, <u>Chen Wang</u>, Shuangfei Zhai, Yizhe Zhang, Lingjie Liu,
                             Josh Susskind</p>
-                        <p>International Conference on Machine Learning, 2024</p>
+                        <p>ICML, 2024</p>
                         <p><a
                                 href="https://openreview.net/pdf/91ce5baf1cb9a852eaf8a1706470b91358790b4a.pdf">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://machinelearning.apple.com/research/boot">Project Page</a>
