--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Chen Wang</title>
     <link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
-    <link rel="icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="icon" type="image/x-icon" href="images/favicon1.svg">
     <!--Use downloaded bootstrap 5.1.3 -->
     <!-- <link href="bootstrap.min.css" rel="stylesheet"> -->
     <link href="https://db.onlinewebfonts.com/c/242a828d266472665bf6ad46819772eb?family=STXingkai" rel="stylesheet">
@@ -125,38 +125,20 @@
                                 href="https://cwchenwang.github.io/physctrl/pdfs/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://cwchenwang.github.io/physctrl">Project Page</a>
                     </div>
-                </div>
+                </div> 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4">
-                        <video width="80%" height="auto" autoplay loop muted controls class="mx-auto d-block">
-                            <source src="data/paper_thumbnail/dimo.mp4" type="video/mp4">
-                        </video>
-                    </div>
+                    <div class="col-md-4"><model-viewer tone-mapping="neutral"
+                            src="data/paper_thumbnail/animal_character.glb" style="width: 100%;"
+                            orientation="0deg 0deg 180deg" shadow-intensity="1" camera-controls="" touch-action="pan-y"
+                            ar-status="not-presenting"></model-viewer></div>
                     <div class="col-md-8 paper-info-v1">
                         <!-- Paper Title -->
-                        DIMO: Diverse 3D Motion Generation for Arbitrary Objects
-                        <p class="text-muted">Linzhan Mou, Jiahui Lei, <u>Chen Wang</u>, Lingjie Liu, Kostas Daniilidis</p>
-                        <p>ICCV, 2025 <span style="color: red;">(Highlight)</span></p>
-                        <p><a href="https://drive.google.com/file/d/1OLg6frLoSHVi1b9vrG6azwlVSc3UngYE/view">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://github.com/Friedrich-M/DIMO">Code</a></p>
-                    </div>
-                </div>
-                <div class="row justify-content-center pub-item">
-                    <div class="col-md-4">
-                        <img src="data/paper_thumbnail/vid2sim.JPG" alt="boot" class="img-fluid mx-auto rounded"
-                            style="width: 80%; height: 110px; display: block;">
-                    </div>
-                    <div class="col-md-8 paper-info-v1">
-                        <!-- Paper Title -->
-                        Vid2Sim: Generalizable, Video-based Reconstruction of Appearance, Geometry and Physics for
-                        Mesh-free Simulation
-                        <p class="text-muted">Chuhao Chen, Zhiyang Dou, <u>Chen Wang</u>, Yiming Huang, Anjun Chen, Qiao
-                            Feng,
-                            Jiatao Gu, Lingjie Liu</p>
-                        <p>CVPR, 2025</p>
-                        <p><a href="https://czzzzh.github.io/Vid2Sim/Vid2Sim.pdf">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://czzzzh.github.io/Vid2Sim/index.html">Project Page</a>&nbsp;|&nbsp;<a
-                                href="https://github.com/CzzzzH/Vid2Sim">Code</a></p>
+                        GECO🦎: Generative Image-to-3D within a SECOnd
+                        <p class="text-muted"><u>Chen Wang</u>, Jiatao Gu, Xiaoxiao Long, Yuan Liu, Lingjie Liu</p>
+                        <p>Arxiv, 2024</p>
+                        <p><a href="https://arxiv.org/abs/2405.20327">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://cwchenwang.github.io/geco/">Project Page</a>&nbsp;|&nbsp;<a
+                                href="https://github.com/cwchenwang/geco">Code</a></p>
                     </div>
                 </div>
                 <div class="row justify-content-center pub-item">
@@ -177,21 +159,6 @@
                                 href="https://github.com/Michaelszj/pro-tracker">Code</a></p>
                     </div>
                 </div> 
-                <div class="row justify-content-center pub-item">
-                    <div class="col-md-4"><model-viewer tone-mapping="neutral"
-                            src="data/paper_thumbnail/animal_character.glb" style="width: 100%;"
-                            orientation="0deg 0deg 180deg" shadow-intensity="1" camera-controls="" touch-action="pan-y"
-                            ar-status="not-presenting"></model-viewer></div>
-                    <div class="col-md-8 paper-info-v1">
-                        <!-- Paper Title -->
-                        GECO🦎: Generative Image-to-3D within a SECOnd
-                        <p class="text-muted"><u>Chen Wang</u>, Jiatao Gu, Xiaoxiao Long, Yuan Liu, Lingjie Liu</p>
-                        <p>Arxiv, 2024</p>
-                        <p><a href="https://arxiv.org/abs/2405.20327">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://cwchenwang.github.io/geco/">Project Page</a>&nbsp;|&nbsp;<a
-                                href="https://github.com/cwchenwang/geco">Code</a></p>
-                    </div>
-                </div>
 
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 ''">
@@ -220,26 +187,10 @@
                         DreamEditor: Text-Driven 3D Scene Editing with Neural Fields
                         <p class="text-muted">Jingyu Zhuang*, <u>Chen Wang*</u>, Liang Lin,
                             Lingjie Liu, Guanbin Li</p>
-                        <p>SIGGRAPH Asia Conference Papers, 2023</p>
+                        <p>SIGGRAPH Asia, 2023</p>
                         <p><a href="https://arxiv.org/abs/2306.13455">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://zjy526223908.github.io/DreamEditor/">Project Page</a>&nbsp;|&nbsp;<a
                                 href="https://github.com/zjy526223908/DreamEditor">Code</a></p>
-                    </div>
-                </div>
-
-                <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
-                        <video width="80%" height="100%" autoplay loop muted controls>
-                            <source src="data/paper_thumbnail/vmesh.mp4" type="video/mp4">
-                        </video>
-                    </div>
-                    <div class="col-md-8 paper-info-v1">
-                        VMesh: Hybrid Volume-Mesh Representation for Efficient View Synthesis
-                        <p class="text-muted">Yuan-Chen Guo, Yan-Pei Cao, <u>Chen Wang</u>,
-                            Yu He, Ying Shan, Xiaohu Qie, Song-Hai Zhang</p>
-                        <p>SIGGRAPH Asia Conference Papers, 2023</p>
-                        <a href="https://arxiv.org/abs/2303.16184">Paper</a>&nbsp;|&nbsp;<a
-                            href="https://bennyguo.github.io/vmesh/">Project Page</a>
                     </div>
                 </div>
 
@@ -254,7 +205,7 @@
                             Dayan
                             Wu, Yuchao Dai,
                             Liangjun Zhang</p>
-                        <p>ACM International Conference on Multimedia (Oral), 2023</p>
+                        <p>ACM MM (Oral), 2023</p>
                         <a
                             href="https://cwchenwang.github.io/outdoor-nerf-depth/data/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
                             href="https://cwchenwang.github.io/outdoor-nerf-depth">Project Page</a>&nbsp;|&nbsp;<a
@@ -270,7 +221,7 @@
                     <div class="col-md-8 paper-info-v1">
                         StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints
                         <p class="text-muted">Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</p>
-                        <p>IEEE Transactions on Pattern Analysis and Machine Intelligence, 2023</p>
+                        <p>IEEE TPAMI, 2023</p>
                     </div>
                 </div>
 
@@ -297,7 +248,7 @@
                         NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling
                         <p class="text-muted"><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai,
                             Shi-Min Hu</p>
-                        <p><em>ACM International Conference on Multimedia, 2022</em></p>
+                        <p>ACM MM, 2022</p>
                         <a href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
                             href="https://cwchenwang.github.io/NeRF-SR">Project Page</a>&nbsp;|&nbsp;<a
                             href="https://github.com/cwchenwang/NeRF-SR">Code</a>
@@ -314,8 +265,7 @@
                         <p class="text-muted"><u>Chen Wang</u>, Song-Hai Zhang, Yi-Zhuo Zhang, Stefanie Zollmann,
                             Shi-Min
                             Hu</p>
-                        <p>IEEE Transactions on Visualization and Computer Graphics,
-                            2022</p>
+                        <p>IEEE TVCG, 2022</p>
                     </div>
                 </div>
             </div>
