--- a/posts.html
+++ b/posts.html
@@ -26,6 +26,12 @@
             <div class="col-xs-12 col-sm-8 col-md-8 slides">
                 <h1>Posts</h1>
                 <div class=item>
+                    <div class=date>August 21, 2025</div>
+                    <div class=posttitle>
+                        <a href="posts/20250817.html" />Second Year Ph.D. Life</a>
+                    </div>
+                </div>
+                <div class=item>
                     <div class=date>May 24, 2024</div>
                     <div class=posttitle>
                         <a href="posts/20240524.html" />First Year Ph.D. Life at Penn</a>
