--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <!-- Paper Title -->
                         GECO🦎: Generative Image-to-3D within a SECOnd
                         <p class="text-muted"><u>Chen Wang</u>, Jiatao Gu, Xiaoxiao Long, Yuan Liu, Lingjie Liu</p>
-                        <p>Arxiv, 2024</p>
+                        <p>IEEE TVCG, 2025</p>
                         <p><a href="https://arxiv.org/abs/2405.20327">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://cwchenwang.github.io/geco/">Project Page</a>&nbsp;|&nbsp;<a
                                 href="https://github.com/cwchenwang/geco">Code</a></p>
