--- a/posts.html
+++ b/posts.html
@@ -16,7 +16,7 @@
         <br>
         <div class="row justify-content-md-center">
             <div class="col-xs-12 text-center page-nav posts">
-                <a href= />Chen Wang</a>
+                <a href="./posts.html">Chen Wang</a>
             </div>
         </div>
     </div>
