--- a/index.html
+++ b/index.html
@@ -63,11 +63,10 @@
                 </h1>
                 <p>I am a CIS PhD student (Fall 2023 - Now) at the University of Pennsylvania,
                     where I have the pleasure to work with <a href="https://lingjie0206.github.io/">Prof.
-                        Lingjie Liu</a>. I am affiliated with the Graphics Lab and GRASP lab. My
-                    research interests are computer graphics and computer vision, with a focus on 3D/4D generative
-                    models
-                    and neural 3D representaions. My research is partly supported by <a
-                        href="https://www.meshy.ai/blog/fellowship-2025">Meshy AI Fellowship</a>.
+                        Lingjie Liu</a>. I am affiliated with the Graphics Lab and GRASP lab. My research is partly supported by <a
+                        href="https://www.meshy.ai/blog/fellowship-2025">Meshy AI Fellowship</a>.</p>
+                <p>
+                    I am interested in Generative AI and its applications, including but not limited to 3D vision and computer graphics.
                 </p>
                 <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
                     <a href=" https://scholar.google.com/citations?user=LDb4tb0AAAAJ&hl=en&oi=ao">Shi-Min Hu</a>
@@ -114,7 +113,7 @@
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/physctrl.png" alt="boot" class="img-fluid mx-auto rounded"
-                            style="width: 80%; height: 130px; display: block;">
+                            style="width: 80%; height: 150px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info-v1">
                         <!-- Paper Title -->
@@ -143,27 +142,23 @@
                 </div>
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4">
-                        <video width="80%" height="auto" autoplay loop muted controls class="mx-auto d-block">
-                            <source src="data/paper_thumbnail/protracker.mp4" type="video/mp4">
-                        </video>
+                        <img src="data/paper_thumbnail/zero12g.png" alt="boot" class="img-fluid mx-auto rounded"
+                            style="width: 80%; height: 180px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info-v1">
                         <!-- Paper Title -->
-                        ProTracker: Probabilistic Integration for Robust and Accurate Point Tracking
-                        <p class="text-muted">Tingyang Zhang, <u>Chen Wang</u>, Zhiyang Dou, Qingzhe Gao, Jiahui Lei,
-                            Baoquan
-                            Chen, Lingjie Liu</p>
-                        <p>Arxiv, 2025</p>
-                        <p><a href="https://arxiv.org/abs/2501.03220">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://michaelszj.github.io/protracker/">Project Page</a>&nbsp;|&nbsp;<a
-                                href="https://github.com/Michaelszj/pro-tracker">Code</a></p>
+                        Zero-1-to-G: Taming Pretrained 2D Diffusion Model for Direct 3D Generation
+                        <p class="text-muted">Xuyi Meng*, <u>Chen Wang*</u>, Jiahui Lei, Kostas Daniilidis, Jiatao Gu,
+                            Lingjie Liu</p>
+                        <p>TMLR, 2025</p>
+                        <p><a href="https://arxiv.org/pdf/2501.05427">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://mengxuyigit.github.io/projects/zero-1-to-G/">Project Page</a></p>
                     </div>
-                </div> 
-
+                </div>
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
+                    <div class="col-md-4">
                         <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid mx-auto rounded"
-                            style="width: 80%; height: 130px; display: block;">
+                            style="width: 80%; height: 150px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info-v1">
                         <!-- Paper Title -->
@@ -180,7 +175,7 @@
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-4 ''">
                         <img src="data/paper_thumbnail/dreameditor.png" alt="dreameditor" class="img-fluid mx-auto"
-                            style="width: 80%; height: 130px; display: block;">
+                            style="width: 80%; height: 150px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info-v1">
                         <!-- Paper Title -->
@@ -256,9 +251,9 @@
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
+                    <div class="col-md-4">
                         <img src="data/paper_thumbnail/rotation-gains.png" alt="rotation-gains"
-                            class="img-fluid mx-auto" style="width: 80%; max-height: 130px; display: block;">
+                            class="img-fluid mx-auto" style="width: 80%; max-height: 150px; display: block;">
                     </div>
                     <div class="col-md-8 paper-info-v1">
                         On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR
@@ -291,6 +286,9 @@
                 <div class="exp-list">
                     <ul>
                         <li>2025 Meshy AI Fellowship
+                        </li>
+                        <li>
+                            2023 Donor-named Fellowship, UPenn
                         </li>
                         <li>2022 National Scholarship
                         </li>
