--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <!-- Paper Title -->
                         PhysCtrl: Generative Physics for Controllable and Physics-Grounded Video Generation
                         <p class="text-muted"><u>Chen Wang*</u>, Chuhao Chen*, Yiming Huang, Zhiyang Dou, Yuan Liu, Jiatao Gu, Lingjie Liu</p>
-                        <p>Arxiv, 2025</p>
+                        <p>NeurIPS, 2025</p>
                         <p><a
                                 href="https://cwchenwang.github.io/physctrl/pdfs/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://cwchenwang.github.io/physctrl">Project Page</a>
