Update paper link to static PDF location

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <p class="text-muted"><u>Chen Wang*</u>, Chuhao Chen*, Yiming Huang, Zhiyang Dou, Yuan Liu, Jiatao Gu, Lingjie Liu</p>
                         <p>NeurIPS, 2025</p>
                         <p><a
-                                href="https://cwchenwang.github.io/physctrl/pdfs/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://cwchenwang.github.io/physctrl/static/pdfs/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://cwchenwang.github.io/physctrl">Project Page</a>
                     </div>
                 </div> 
