--- a/index.html
+++ b/index.html
@@ -121,8 +121,9 @@
                         <p class="text-muted"><u>Chen Wang*</u>, Chuhao Chen*, Yiming Huang, Zhiyang Dou, Yuan Liu, Jiatao Gu, Lingjie Liu</p>
                         <p>NeurIPS, 2025</p>
                         <p><a
-                                href="https://cwchenwang.github.io/physctrl/static/pdfs/paper.pdf">Paper</a>&nbsp;|&nbsp;<a
-                                href="https://cwchenwang.github.io/physctrl">Project Page</a>
+                                href="https://arxiv.org/abs/2509.20358">Paper</a>&nbsp;|&nbsp;<a
+                                href="https://cwchenwang.github.io/physctrl">Project Page</a>&nbsp;|&nbsp;<a
+                                href="https://github.com/cwchenwang/physctrl">Code</a></p>
                     </div>
                 </div> 
                 <div class="row justify-content-center pub-item">
