--- a/index.html
+++ b/index.html
@@ -34,55 +34,51 @@
 
 <body>
     <div class="header">
-        <!-- <a href="#">Chen Wang</a> -->
-        <div class="ftheader">
+        <div class="nav-brand">
             <a href="#home">Chen Wang</a>
         </div>
-        <!-- ??? why the order is reversed -->
-        <div class="ftsubheader">
-            <a href="./posts.html">Posts</a>
-        </div>
-        <div class="ftsubheader">
-            <a href="#awards">Awards</a>
-        </div>
-        <div class="ftsubheader">
-            <a href="#services">Services</a>
-        </div>
-        <div class="ftsubheader">
+        <nav class="nav-links">
+            <a href="#home" class="active">Home</a>
             <a href="#publications">Publications</a>
-        </div>
-        <div class="ftsubheader">
-            <a href="#home">Home</a>
-        </div>
+            <a href="#services">Services</a>
+            <a href="#awards">Awards</a>
+            <a href="./posts.html">Posts</a>
+        </nav>
     </div>
 
     <div class="container" id="home">
-        <div class="row justify-content-center intro">
-            <div class="links1 col-9">
-                <h1 class="text-center">Chen Wang&nbsp&nbsp<span style="font-family: STXingkai;">王琛</span>
-                </h1>
-                <p>I am a CIS PhD student (Fall 2023 - Now) at the University of Pennsylvania,
-                    where I have the pleasure to work with <a href="https://lingjie0206.github.io/">Prof.
-                        Lingjie Liu</a>. I am affiliated with the Graphics Lab and GRASP lab. My research is partly supported by <a
-                        href="https://www.meshy.ai/blog/fellowship-2025">Meshy AI Fellowship</a>.</p>
-                <p>
-                    I am interested in Generative AI and its applications, including but not limited to 3D vision and computer graphics.
-                </p>
-                <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
-                    <a href=" https://scholar.google.com/citations?user=LDb4tb0AAAAJ&hl=en&oi=ao">Shi-Min Hu</a>
-                    and <a href="https://scholar.google.com/citations?user=AWtV-EQAAAAJ&hl=en&oi=ao">Prof. Song-Hai
-                        Zhang</a>.
-                </p>
-                <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
+        <div class="hero-panel">
+            <div class="row align-items-center intro hero-section">
+                <div class="links1 col-12 col-lg-9 hero-card">
+                    <h1 class="hero-name text-center text-lg-start">Chen Wang&nbsp&nbsp<span
+                            style="font-family: STXingkai;">王琛</span>
+                    </h1>
+                    <p>I am a CIS PhD student (Fall 2023 - Now) at the University of Pennsylvania,
+                        where I am advised by <a href="https://lingjie0206.github.io/">Prof.
+                            Lingjie Liu</a>. My research has been partly
+                        supported by <a href="https://www.meshy.ai/blog/fellowship-2025">Meshy AI Fellowship</a>.</p>
+                    <p>
+                        I am interested in Generative AI and its applications, including but not limited to 3D vision
+                        and
+                        computer graphics. I am open to research discussions, feel free to drop me an email!
+                    </p>
+                    <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
+                        <a href=" https://scholar.google.com/citations?user=LDb4tb0AAAAJ&hl=en&oi=ao">Shi-Min Hu</a>
+                        and <a href="https://scholar.google.com/citations?user=AWtV-EQAAAAJ&hl=en&oi=ao">Prof. Song-Hai
+                            Zhang</a>.
+                    </p>
+                    <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
                         what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
-                <div class="links text-center">
-                    <a href="mailto:cw.chenwang@outlook.com">Email</a>
-                    <a href="data/CV_en.pdf">CV</a>
-                    <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google Scholar</a>
+                    <div class="links hero-links text-center text-lg-start">
+                        <a href="mailto:cw.chenwang@outlook.com">Email</a>
+                        <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google Scholar</a>
+                        <a href="https://x.com/chenwangcw">Twitter</a>
+                        <a href="https://www.linkedin.com/in/chen-wang-05509b161/">Linkedin</a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-3">
-                <img src="data/pic.png" class="avatar img-fluid rounded-circle">
+                <div class="col-12 col-lg-3 hero-avatar text-center">
+                    <img src="data/pic.png" class="avatar img-fluid rounded-circle">
+                </div>
             </div>
         </div>
         <div class="row justify-content-center" id="news">
@@ -111,30 +107,33 @@
                 <p class="section-name" style="margin-bottom: 3pt; ">Selected Publications</p>
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
-                        <img src="data/paper_thumbnail/physctrl.png" alt="boot" class="img-fluid mx-auto rounded"
-                            style="width: 80%; height: 150px; display: block;">
+                    <div class="col-md-3">
+                        <img src="data/paper_thumbnail/physctrl.png" alt="boot" class="img-fluid mx-auto rounded">
                     </div>
-                    <div class="col-md-8 paper-info-v1">
+                    <div class="col-md-9 paper-info-v1">
                         <!-- Paper Title -->
-                        PhysCtrl: Generative Physics for Controllable and Physics-Grounded Video Generation
-                        <p class="text-muted"><u>Chen Wang*</u>, Chuhao Chen*, Yiming Huang, Zhiyang Dou, Yuan Liu, Jiatao Gu, Lingjie Liu</p>
+                        <h3 class="paper-title">PhysCtrl: Generative Physics for Controllable and Physics-Grounded Video
+                            Generation</h3>
+                        <p class="paper-authors"><strong>Chen Wang*</strong>, Chuhao Chen*, Yiming Huang, Zhiyang Dou,
+                            Yuan
+                            Liu,
+                            Jiatao Gu, Lingjie Liu</p>
                         <p>NeurIPS, 2025</p>
-                        <p><a
-                                href="https://arxiv.org/abs/2509.20358">Paper</a>&nbsp;|&nbsp;<a
+                        <p><a href="https://arxiv.org/abs/2509.20358">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://cwchenwang.github.io/physctrl">Project Page</a>&nbsp;|&nbsp;<a
                                 href="https://github.com/cwchenwang/physctrl">Code</a></p>
                     </div>
-                </div> 
+                </div>
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4"><model-viewer tone-mapping="neutral"
-                            src="data/paper_thumbnail/animal_character.glb" style="width: 100%;"
-                            orientation="0deg 0deg 180deg" shadow-intensity="1" camera-controls="" touch-action="pan-y"
+                    <div class="col-md-3"><model-viewer tone-mapping="neutral"
+                            src="data/paper_thumbnail/animal_character.glb" orientation="0deg 0deg 180deg"
+                            shadow-intensity="1" camera-controls="" touch-action="pan-y"
                             ar-status="not-presenting"></model-viewer></div>
-                    <div class="col-md-8 paper-info-v1">
+                    <div class="col-md-9 paper-info-v1">
                         <!-- Paper Title -->
-                        GECO🦎: Generative Image-to-3D within a SECOnd
-                        <p class="text-muted"><u>Chen Wang</u>, Jiatao Gu, Xiaoxiao Long, Yuan Liu, Lingjie Liu</p>
+                        <h3 class="paper-title">GECO🦎: Generative Image-to-3D within a SECOnd</h3>
+                        <p class="paper-authors"><strong>Chen Wang</strong>, Jiatao Gu, Xiaoxiao Long, Yuan Liu, Lingjie
+                            Liu</p>
                         <p>IEEE TVCG, 2025</p>
                         <p><a href="https://arxiv.org/abs/2405.20327">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://cwchenwang.github.io/geco/">Project Page</a>&nbsp;|&nbsp;<a
@@ -142,46 +141,44 @@
                     </div>
                 </div>
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4">
-                        <img src="data/paper_thumbnail/zero12g.png" alt="boot" class="img-fluid mx-auto rounded"
-                            style="width: 80%; height: 180px; display: block;">
+                    <div class="col-md-3">
+                        <img src="data/paper_thumbnail/zero12g.png" alt="boot" class="img-fluid mx-auto rounded">
                     </div>
-                    <div class="col-md-8 paper-info-v1">
+                    <div class="col-md-9 paper-info-v1">
                         <!-- Paper Title -->
-                        Zero-1-to-G: Taming Pretrained 2D Diffusion Model for Direct 3D Generation
-                        <p class="text-muted">Xuyi Meng*, <u>Chen Wang*</u>, Jiahui Lei, Kostas Daniilidis, Jiatao Gu,
+                        <h3 class="paper-title">Zero-1-to-G: Taming Pretrained 2D Diffusion Model for Direct 3D
+                            Generation</h3>
+                        <p class="paper-authors">Xuyi Meng*, <strong>Chen Wang*</strong>, Jiahui Lei, Kostas Daniilidis,
+                            Jiatao Gu,
                             Lingjie Liu</p>
                         <p>TMLR, 2025</p>
                         <p><a href="https://arxiv.org/pdf/2501.05427">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://mengxuyigit.github.io/projects/zero-1-to-G/">Project Page</a></p>
                     </div>
                 </div>
-                <div class="row justify-content-center pub-item">
-                    <div class="col-md-4">
-                        <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid mx-auto rounded"
-                            style="width: 80%; height: 150px; display: block;">
+                <!-- <div class="row justify-content-center pub-item">
+                    <div class="col-md-3">
+                        <img src="data/paper_thumbnail/boot.jpeg" alt="boot" class="img-fluid mx-auto rounded">
                     </div>
-                    <div class="col-md-8 paper-info-v1">
-                        <!-- Paper Title -->
+                    <div class="col-md-9 paper-info-v1">
                         Data-free Distillation of Denoising Diffusion Models with Bootstrapping
-                        <p class="text-muted">Jiatao Gu, <u>Chen Wang</u>, Shuangfei Zhai, Yizhe Zhang, Lingjie Liu,
+                        <p class="paper-authors">Jiatao Gu, <strong>Chen Wang</strong>, Shuangfei Zhai, Yizhe Zhang, Lingjie Liu,
                             Josh Susskind</p>
                         <p>ICML, 2024</p>
                         <p><a
                                 href="https://openreview.net/pdf/91ce5baf1cb9a852eaf8a1706470b91358790b4a.pdf">Paper</a>&nbsp;|&nbsp;<a
                                 href="https://machinelearning.apple.com/research/boot">Project Page</a>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
-                        <img src="data/paper_thumbnail/dreameditor.png" alt="dreameditor" class="img-fluid mx-auto"
-                            style="width: 80%; height: 150px; display: block;">
+                    <div class="col-md-3">
+                        <img src="data/paper_thumbnail/dreameditor.png" alt="dreameditor"
+                            class="img-fluid mx-auto rounded">
                     </div>
-                    <div class="col-md-8 paper-info-v1">
-                        <!-- Paper Title -->
-                        DreamEditor: Text-Driven 3D Scene Editing with Neural Fields
-                        <p class="text-muted">Jingyu Zhuang*, <u>Chen Wang*</u>, Liang Lin,
+                    <div class="col-md-9 paper-info-v1">
+                        <h3 class="paper-title">DreamEditor: Text-Driven 3D Scene Editing with Neural Fields</h3>
+                        <p class="paper-authors">Jingyu Zhuang*, <strong>Chen Wang*</strong>, Liang Lin,
                             Lingjie Liu, Guanbin Li</p>
                         <p>SIGGRAPH Asia, 2023</p>
                         <p><a href="https://arxiv.org/abs/2306.13455">Paper</a>&nbsp;|&nbsp;<a
@@ -191,13 +188,14 @@
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
+                    <div class="col-md-3">
                         <img src="data/paper_thumbnail/outdoor-nerf-depth.png" alt="outdoor-nerf-depth"
-                            class="img-fluid mx-auto rounded" style="width: 80%; display: block;">
+                            class="img-fluid mx-auto rounded">
                     </div>
-                    <div class="col-md-8 paper-info-v1">
-                        Digging into Depth Priors for Outdoor Neural Radiance Fields
-                        <p class="text-muted"><u>Chen Wang</u>, Jiadai Sun, Lina Liu, Chenming Wu, Zhelun Shen,
+                    <div class="col-md-9 paper-info-v1">
+                        <h3 class="paper-title">Digging into Depth Priors for Outdoor Neural Radiance Fields</h3>
+                        <p class="paper-authors"><strong>Chen Wang</strong>, Jiadai Sun, Lina Liu, Chenming Wu, Zhelun
+                            Shen,
                             Dayan
                             Wu, Yuchao Dai,
                             Liangjun Zhang</p>
@@ -208,41 +206,45 @@
                             href="https://github.com/cwchenwang/outdoor-nerf-depth">Code</a>
                     </div>
                 </div>
-
+                <!-- 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
+                    <div class="col-md-3">
                         <img src="data/paper_thumbnail/structnerf.png" alt="structnerf"
-                            class="img-fluid mx-auto rounded" style="width: 80%; height: 120px; display: block;">
+                            class="img-fluid mx-auto rounded">
                     </div>
-                    <div class="col-md-8 paper-info-v1">
+                    <div class="col-md-9 paper-info-v1">
                         StructNeRF: Neural Radiance Fields for Indoor Scenes with Structural Hints
-                        <p class="text-muted">Zheng Chen, <u>Chen Wang</u>, Yuan-Chen Guo, Song-Hai Zhang</p>
+                        <p class="paper-authors">Zheng Chen, <strong>Chen Wang</strong>, Yuan-Chen Guo, Song-Hai Zhang</p>
                         <p>IEEE TPAMI, 2023</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
+                    <div class="col-md-3">
                         <img src="data/paper_thumbnail/deepportraitdrawing.png" alt="deepportraitdrawing"
-                            class="img-fluid mx-auto rounded" style="width: 80%; height: 130px; display: block;">
+                            class="img-fluid mx-auto rounded">
                     </div>
-                    <div class="col-md-8 paper-info-v1">
-                        DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches
-                        <p class="text-muted"><u>Chen Wang*</u>, Xian Wu*, Hongbo Fu, Ariel Shamir, Song-Hai Zhang
+                    <div class="col-md-9 paper-info-v1">
+                        <h3 class="paper-title">DeepPortraitDrawing: Generating Human Body Images from Freehand Sketches
+                        </h3>
+                        <p class="paper-authors"><strong>Chen Wang*</strong>, Xian Wu*, Hongbo Fu, Ariel Shamir,
+                            Song-Hai
+                            Zhang
                         </p>
                         <p>Computer & Graphics (CAD/Graphics Oral), 2023</p>
                     </div>
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4 ''">
-                        <video width="70%" height="auto" autoplay loop muted controls class="mx-auto d-block">
+                    <div class="col-md-3">
+                        <video autoplay loop muted controls class="mx-auto d-block">
                             <source src="data/paper_thumbnail/nerf-sr.mp4" type="video/mp4">
                         </video>
                     </div>
-                    <div class="col-md-8 paper-info-v1">
-                        NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling
-                        <p class="text-muted"><u>Chen Wang</u>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang, Yu-Wing Tai,
+                    <div class="col-md-9 paper-info-v1">
+                        <h3 class="paper-title">NeRF-SR: High-Quality Neural Radiance Fields using Super-sampling</h3>
+                        <p class="paper-authors"><strong>Chen Wang</strong>, Xian Wu, Yuan-Chen Guo, Song-Hai Zhang,
+                            Yu-Wing Tai,
                             Shi-Min Hu</p>
                         <p>ACM MM, 2022</p>
                         <a href="https://arxiv.org/abs/2112.01759">Paper</a>&nbsp;|&nbsp;<a
@@ -252,13 +254,15 @@
                 </div>
 
                 <div class="row justify-content-center pub-item">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <img src="data/paper_thumbnail/rotation-gains.png" alt="rotation-gains"
-                            class="img-fluid mx-auto" style="width: 80%; max-height: 150px; display: block;">
+                            class="img-fluid mx-auto rounded">
                     </div>
-                    <div class="col-md-8 paper-info-v1">
-                        On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR
-                        <p class="text-muted"><u>Chen Wang</u>, Song-Hai Zhang, Yi-Zhuo Zhang, Stefanie Zollmann,
+                    <div class="col-md-9 paper-info-v1">
+                        <h3 class="paper-title">On Rotation Gains Within and Beyond Perceptual Limitations for Seated VR
+                        </h3>
+                        <p class="paper-authors"><strong>Chen Wang</strong>, Song-Hai Zhang, Yi-Zhuo Zhang, Stefanie
+                            Zollmann,
                             Shi-Min
                             Hu</p>
                         <p>IEEE TVCG, 2022</p>
@@ -305,7 +309,7 @@
             </div>
         </div>
         <footer class="text-center">
-            <p>This website was last updated in Mar, 2025.</p>
+            <p>This website was last updated in Dec, 2025.</p>
             <p>© Copyright 2021 - Present</p>
         </footer>
     </div>
