--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chen Wang</title>
     <link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;500;600;700;900&display=swap'
+        rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/x-icon" href="images/favicon1.svg">
     <!--Use downloaded bootstrap 5.1.3 -->
     <!-- <link href="bootstrap.min.css" rel="stylesheet"> -->
@@ -49,7 +50,7 @@
     <div class="container" id="home">
         <div class="hero-panel">
             <div class="row align-items-center intro hero-section">
-                <div class="links1 col-12 col-lg-9 hero-card">
+                <div class="links1 col-8 col-lg-9 hero-card">
                     <h1 class="hero-name text-center text-lg-start">Chen Wang&nbsp&nbsp<span
                             style="font-family: STXingkai;">王琛</span>
                     </h1>
@@ -76,7 +77,7 @@
                         <a href="https://www.linkedin.com/in/chen-wang-05509b161/">Linkedin</a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 hero-avatar text-center">
+                <div class="col-4 col-lg-3 hero-avatar text-center">
                     <img src="data/pic.png" class="avatar img-fluid rounded-circle">
                 </div>
             </div>
@@ -303,7 +304,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-3">
+            <div class="col-4">
                 <script type="text/javascript" id="clustrmaps"
                     src="//clustrmaps.com/map_v2.js?d=S31GDEkuyTI1cAIMEWRZaWrVuS-0CFW0bIl3_ZDOvmk&cl=ffffff&w=a"></script>
             </div>
