--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chen Wang</title>
     <link href='https://fonts.googleapis.com/css?family=Pinyon Script' rel='stylesheet'>
-    <link href='https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;500;600;700;900&display=swap'
-        rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="icon" type="image/x-icon" href="images/favicon1.svg">
     <!--Use downloaded bootstrap 5.1.3 -->
     <!-- <link href="bootstrap.min.css" rel="stylesheet"> -->
@@ -48,37 +47,46 @@
     </div>
 
     <div class="container" id="home">
-        <div class="hero-panel">
-            <div class="row align-items-center intro hero-section">
-                <div class="links1 col-8 col-lg-9 hero-card">
-                    <h1 class="hero-name text-center text-lg-start">Chen Wang&nbsp&nbsp<span
-                            style="font-family: STXingkai;">王琛</span>
-                    </h1>
-                    <p>I am a CIS PhD student (Fall 2023 - Now) at the University of Pennsylvania,
-                        where I am advised by <a href="https://lingjie0206.github.io/">Prof.
-                            Lingjie Liu</a>. My research has been partly
-                        supported by <a href="https://www.meshy.ai/blog/fellowship-2025">Meshy AI Fellowship</a>.</p>
-                    <p>
-                        I am interested in Generative AI and its applications, including but not limited to 3D vision
-                        and
-                        computer graphics. I am open to research discussions, feel free to drop me an email!
-                    </p>
-                    <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
-                        <a href=" https://scholar.google.com/citations?user=LDb4tb0AAAAJ&hl=en&oi=ao">Shi-Min Hu</a>
-                        and <a href="https://scholar.google.com/citations?user=AWtV-EQAAAAJ&hl=en&oi=ao">Prof. Song-Hai
-                            Zhang</a>.
-                    </p>
-                    <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
+        <div class="row justify-content-center">
+            <div class="col-12">
+                <div class="hero-panel">
+                    <div class="row align-items-center intro hero-section">
+                        <div class="links1 col-12 col-lg-9 hero-card">
+                            <h1 class="hero-name text-center text-lg-start">Chen Wang&nbsp&nbsp<span
+                                    style="font-family: STXingkai;">王琛</span>
+                            </h1>
+                            <p>I am a CIS PhD student (Fall 2023 - Now) at the University of Pennsylvania,
+                                where I am advised by <a href="https://lingjie0206.github.io/">Prof.
+                                    Lingjie Liu</a>. My research has been partly
+                                supported by <a href="https://www.meshy.ai/blog/fellowship-2025">Meshy AI
+                                    Fellowship</a>.</p>
+                            <p>
+                                I am interested in Generative AI and its applications, including but not limited to 3D
+                                vision
+                                and
+                                computer graphics. I am open to research discussions, feel free to drop me an email!
+                            </p>
+                            <p>I did my undergraduate and master study in CS at Tsinghua University, working with Prof.
+                                <a href=" https://scholar.google.com/citations?user=LDb4tb0AAAAJ&hl=en&oi=ao">Shi-Min
+                                    Hu</a>
+                                and <a href="https://scholar.google.com/citations?user=AWtV-EQAAAAJ&hl=en&oi=ao">Prof.
+                                    Song-Hai
+                                    Zhang</a>.
+                            </p>
+                            <!-- <p class=" quote">"Our primary drive in life is not pleasure, but the discovery and pursuit of
                         what we personally find meaningful. (In Man's Search For Meaning)"</p> -->
-                    <div class="links hero-links text-center text-lg-start">
-                        <a href="mailto:cw.chenwang@outlook.com">Email</a>
-                        <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google Scholar</a>
-                        <a href="https://x.com/chenwangcw">Twitter</a>
-                        <a href="https://www.linkedin.com/in/chen-wang-05509b161/">Linkedin</a>
+                            <div class="links hero-links text-center text-lg-start">
+                                <a href="mailto:cw.chenwang@outlook.com">Email</a>
+                                <a href="https://scholar.google.com/citations?user=5cY3Ho4AAAAJ&hl=en">Google
+                                    Scholar</a>
+                                <a href="https://x.com/chenwangcw">Twitter</a>
+                                <a href="https://www.linkedin.com/in/chen-wang-05509b161/">Linkedin</a>
+                            </div>
+                        </div>
+                        <div class="col-12 col-lg-3 hero-avatar text-center">
+                            <img src="data/pic.png" class="avatar img-fluid rounded-circle">
+                        </div>
                     </div>
-                </div>
-                <div class="col-4 col-lg-3 hero-avatar text-center">
-                    <img src="data/pic.png" class="avatar img-fluid rounded-circle">
                 </div>
             </div>
         </div>
@@ -304,7 +312,7 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-4">
+            <div class="col-3">
                 <script type="text/javascript" id="clustrmaps"
                     src="//clustrmaps.com/map_v2.js?d=S31GDEkuyTI1cAIMEWRZaWrVuS-0CFW0bIl3_ZDOvmk&cl=ffffff&w=a"></script>
             </div>
