update tttLRM paper

--- a/index.html
+++ b/index.html
@@ -130,6 +130,22 @@
                 <p style="margin-bottom: 3pt;">* denotes equal contribution</p>
                 <div class="row justify-content-center pub-item">
                     <div class="col-md-3">
+                        <img src="data/paper_thumbnail/tttLRM.png" alt="boot" class="img-fluid mx-auto rounded">
+                    </div>
+                    <div class="col-md-9 paper-info-v1">
+                        <!-- Paper Title -->
+                        <h3 class="paper-title">tttLRM: Test-Time Training for Long Context and Autoregressive 3D
+                            Reconstruction</h3>
+                        <p class="paper-authors"><strong>Chen Wang</strong>, Hao Tan, Wang Yifan, Zhiqin Chen, Yuheng
+                            Liu, Kalyan
+                            Sunkavalli, Sai Bi, Lingjie Liu$, Yiwei Hu$</p>
+                        <p>Arxiv, 2026</p>
+                        <p><a href="https://cwchenwang.github.io/tttLRM">Project Page</a>&nbsp;|&nbsp;<a
+                                href="https://github.com/cwchenwang/tttLRM">Code</a></p>
+                    </div>
+                </div>
+                <div class="row justify-content-center pub-item">
+                    <div class="col-md-3">
                         <img src="data/paper_thumbnail/physctrl.png" alt="boot" class="img-fluid mx-auto rounded">
                     </div>
                     <div class="col-md-9 paper-info-v1">
