Update blog layout and add new posts

--- a/posts.html
+++ b/posts.html
@@ -22,8 +22,8 @@
     </div>
     <div class=container-fluid>
         <div class="row posts">
-            <div class="col-xs-0 col-sm-0 col-md-2 links"></div>
-            <div class="col-xs-12 col-sm-8 col-md-8 slides">
+            <div class="col-xs-0 col-sm-0 col-md-3 links"></div>
+            <div class="col-xs-12 col-sm-8 col-md-6 slides">
                 <h1>Posts</h1>
                 <div class=item>
                     <div class=date>August 21, 2025</div>
@@ -35,6 +35,48 @@
                     <div class=date>May 24, 2024</div>
                     <div class=posttitle>
                         <a href="posts/20240524.html" />First Year Ph.D. Life at Penn</a>
+                    </div>
+                </div>
+                <div class=item>
+                    <div class=date>July 30, 2019</div>
+                    <div class=posttitle>
+                        <a href="posts/20190730.html" />Getty Center</a>
+                    </div>
+                </div>
+                <div class=item>
+                    <div class=date>June 1, 2019</div>
+                    <div class=posttitle>
+                        <a href="posts/20190601.html" />中微结课</a>
+                    </div>
+                </div>
+                <div class=item>
+                    <div class=date>March 2, 2018</div>
+                    <div class=posttitle>
+                        <a href="posts/20180302.html" />读《艺术的故事》</a>
+                    </div>
+                </div>
+                <div class=item>
+                    <div class=date>July 8, 2017</div>
+                    <div class=posttitle>
+                        <a href="posts/20170708a.html" />读吴国盛《什么是科学》</a>
+                    </div>
+                </div>
+                <div class=item>
+                    <div class=date>July 8, 2017</div>
+                    <div class=posttitle>
+                        <a href="posts/20170708b.html" />浅谈中世纪宗教对科学的影响</a>
+                    </div>
+                </div>
+                <div class=item>
+                    <div class=date>June 7, 2017</div>
+                    <div class=posttitle>
+                        <a href="posts/20170607.html" />高考一周年</a>
+                    </div>
+                </div>
+                <div class=item>
+                    <div class=date>May 12, 2017</div>
+                    <div class=posttitle>
+                        <a href="posts/20170512.html" />《乔布斯传》读后感</a>
                     </div>
                 </div>
             </div>
